<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BT Tag Writer</string>
    <string name="bt_devices_caption_str">Select Bluetooth Device</string>
    <string name="start_button_str">Start Wizard</string>
    <string name="about_button_str">Application Details</string>
    <string name="about_info_str">This software is provided &quot;as is&quot; and without any express or implied warranties, including, without limitation, the implied waranties of merchantability and fitness for a particular purpose.&lt;br/&gt;&lt;br/&gt;Please report issues and new feature requests to sami.viitanen@gmail.com&lt;br/&gt;&lt;br/&gt;Thanks!</string>
    <string name="about_credits_str">&lt;big&gt;&lt;b&gt;&lt;u&gt;Credits&lt;/u&gt;&lt;/b&gt;&lt;/big&gt;&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Programming and Graphics&lt;/b&gt;&lt;br/&gt;Sami Viitanen&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Testing and Special Thanks&lt;/b&gt;&lt;br/&gt;---&lt;br/&gt;</string>
    <string name="about_copyright_str">Copyright Sami Viitanen 2011, All rights reserved.</string>
    <string name="about_issues_str">&lt;big&gt;&lt;b&gt;&lt;u&gt;Known limitations&lt;/u&gt;&lt;/b&gt;&lt;/big&gt;&lt;br/&gt;&lt;br/&gt;* Only for A2DP audio devices (=speakers). Headsets not supported&lt;br/&gt;&lt;br/&gt;* Automatic PIN code handling for devices still missing. Devices with 0000 PIN code should work.&lt;br/&gt;&lt;br/&gt;* Support of different tag types depends on your device and version of Android. If you have issues with some tags please include following information to report: What were your device, version of Android and type of tag.&lt;br/&gt;&lt;br/&gt;* &quot;Jelly Bean&quot; tags are understood by all Android 4.1+ devices, but application tags only work with devices which have this application installed.</string>
    <string name="start_guide_str">This application allows you to write Bluetooth connectivity information to NFC tags. These tags can be then used for easy connecting between your Bluetooth devices and Android phone. Connecting and disconnecting happens simply by touching the NFC tag with your device.</string>
    <string name="end_success_str">Tag written successfully!</string>
    <string name="end_write_another_str">Write another tag</string>
    <string name="bt_device_name_str">Unknown device</string>
    <string name="bt_device_address_str">00:00:00:00:00:00</string>
    <string name="end_exit_str">Exit</string>
    <string name="action_dialog_nfc_not_enabled_str">NFC does not seem to be enabled. You have to enable it manually. Tap OK to start settings. Return to this application with back after you are done.</string>
    <string name="action_dialog_ok">OK</string>
    <string name="action_dialog_bluetooth_failed_str">Failed to enable Bluetooth.</string>
    <string name="tap_guide_str">Please move your phone close to writable NFC tag. When tag is found, Bluetooth connectivity information will be written to it.</string>
    <string name="extraopts_caption_str">Write Options</string>
    <string name="extraopts_ready_str">Write to Tag</string>
    <string name="extraopts_selected_device_caption_str">Selected device</string>
    <string name="extraopts_selected_device_default_str">-</string>
    <string name="extraopts_pin_caption_str">Pin code:</string>
    <string name="extraopts_make_readonly_str">Enable write protection of the tag</string>
    <string name="toast_bluetooth_enabled_str">Bluetooth enabled to locate Bluetooth devices.</string>
    <string name="tag_no_nfc_support_str">Your device does not support NFC</string>
    <string name="pair_app_name">NFC Bluetooth Pairing</string>
    <string name="pair_connecting_str">Connecting to %1</string>
    <string name="pair_bounding_str">Pairing with %1</string>
    <string name="pair_searching_tag_str">Please tap your tag with the phone</string>
    <string name="pair_disconnecting_str">Disconnecting %1</string>
    <string name="pair_unnamed_device_str">Bluetooth device</string>
    <string name="pair_enabling_bluetooth">Enabling Bluetooth connectivity</string>
    <string name="pair_failed_to_bound_str">Failed to pair %1</string><string name="pair_failed_to_connect_str">Failed to connect to %1</string>
    <string name="pair_failed_to_disconnect_str">Failed to disconnect %1</string>
    <string name="pair_failed_unknown_str">Failed: %1</string>
    <string name="extraopts_make_readonly_info_str">Be careful! Setting tag read only is irreversible action.</string>
    <string name="btscan_started_str">Please enable the pair mode of your Bluetooth device.</string>
    <string name="btscan_no_devices_found_str">No Bluetooth audio devices found. Please check that your Bluetooth devices are turned on, in pairing mode and visible. Then restart the device discovery.</string>
    <string name="tag_write_failed_str">Writing to tag failed.\nPlease check that tag is not write protected. Also keep it close to device while software is writing.</string>
    <string name="tag_is_too_small_str">Given tag is too small to contain information needed.</string>
    <string name="tag_unsupported_str">Given tag is unsupported. Try another.</string>
    <string name="btscan_paired_str">(paired)</string>
    <string name="about_links_str">&lt;big&gt;&lt;b&gt;&lt;u&gt;Links&lt;/u&gt;&lt;/b&gt;&lt;/big&gt;&lt;br/&gt;&lt;br/&gt;* video: http://www.youtube.com/watch?v=IbuLGsXIvKI&lt;br/&gt;* source code: http://oss.siika.fi&lt;br/&gt;</string>
    <string name="back_button">Back</string>
    <string name="filter_bt_devices_str">Filter devices</string>
    <string name="extraopts_jellybean_mode_str">Jelly Bean mode</string>
    <string name="extraopts_jellybean_mode_info_str">Tag written with &quot;Jelly Bean mode&quot; can be read with all NFC enabled Android 4.1+ phones. So you do not need to install BT Tag Writer to read these tags. But at the same time you can not read these with older versions of Android.</string>
    
    

</resources>