<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ViewFlipper
        android:id="@+id/mainFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		
		    <ImageView
		        android:id="@+id/startImageView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="6pt"
		        android:layout_marginRight="6pt"
		        android:src="@drawable/start" />
		
		    <TextView
		        android:id="@+id/startTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="6pt"
		        android:paddingRight="6pt"
		        android:text="@string/start_guide_str" />
		
		    <Button
		        android:id="@+id/startButton"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="6pt"
		        android:layout_marginRight="6pt"
		        android:layout_marginTop="6pt"
		        android:text="@string/start_button_str" />
		
		</LinearLayout>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >

		    <LinearLayout
		        android:id="@+id/linearLayout1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/bt_devices_caption_bgcolor" >
		
		        <TextView
		            android:id="@+id/bt_devices_caption"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="3pt"
		            android:layout_marginBottom="3pt"
		            android:layout_weight="2"
		            android:paddingLeft="6pt"
		            android:text="@string/bt_devices_caption_str"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="@color/bt_devices_caption_fgcolor"
		            android:shadowColor="@color/bt_devices_caption_shadowcolor" />
		
		        <ProgressBar
		            android:id="@+id/btScanProgressBar"
		            style="?android:attr/progressBarStyleSmall"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_marginBottom="3pt"
		            android:layout_marginRight="6pt"
		            android:layout_marginTop="3pt"
		            android:layout_weight="1"
		            android:indeterminate="false"
		            android:visibility="invisible" />
		
		    </LinearLayout>
		    
		    <ListView
		        android:layout_height="wrap_content" 
		        android:layout_width="fill_parent"
		        android:id="@+id/btDevicesList"/>
		
		</LinearLayout>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
		
		    <LinearLayout
		        android:id="@+id/nfcWriterYTopHlinearLayout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/nfc_writer_caption_bgcolor"
		        android:orientation="horizontal">
		
			        <TextView
			            android:id="@+id/nfcWriterCaption"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_margin="3pt"
			            android:layout_marginBottom="3pt"
			            android:layout_weight="2"
			            android:paddingLeft="6pt"
			            android:text="@string/nfc_writer_caption_str"
			            android:textAppearance="?android:attr/textAppearanceLarge"
			            android:textColor="@color/nfc_writer_caption_fgcolor"
			            android:shadowColor="@color/nfc_writer_caption_shadowcolor" />
			
			        <ProgressBar
			            android:id="@+id/nfcWriterProgressBar"
			            style="?android:attr/progressBarStyleSmall"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:layout_marginBottom="3pt"
			            android:layout_marginRight="6pt"
			            android:layout_marginTop="3pt"
			            android:layout_weight="1" />
		
		    </LinearLayout>
		    
		    <ListView
		        android:layout_height="wrap_content" 
		        android:layout_width="fill_parent"
		        android:id="@+id/stepsList"/>
		    
		</LinearLayout>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
		
		    <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="12pt"
		        android:layout_marginRight="12pt"
		        android:src="@drawable/success" />
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/end_success_str"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <Button
		        android:id="@+id/restartButton"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="6pt"
		        android:layout_marginRight="6pt"
		        android:layout_marginTop="12pt"
		        android:text="@string/end_write_another_str" />
		
		</LinearLayout>
		
    </ViewFlipper>

</LinearLayout>